kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solitaire-test-service
spec:
  selector:
    app: solitaire-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
