kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solitaire-test-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - example.com
    secretName: solitaire-test-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solitaire-test-service
            port:
              number: 5000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solitaire-test-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - example.com
    secretName: solitaire-test-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: solitaire-test-service
            port:
              number: 80
